[gd_scene load_steps=11 format=3 uid="uid://dns3vic506tdf"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_df0y5"]
[ext_resource type="Shader" path="res://Shaders/electric.gdshader" id="2_0kkhb"]
[ext_resource type="Texture2D" uid="uid://dxfdg00cxgjwq" path="res://Images/abstract-elegant-stylish-wave-background.jpg" id="2_yj150"]
[ext_resource type="FontFile" uid="uid://drmbltel11xaa" path="res://Fonts/glitch-goblin-font/GlitchGoblin-2O87v.ttf" id="4_n04ua"]
[ext_resource type="Texture2D" uid="uid://cg55xdtkd1td2" path="res://Fonts/T_Space_Key_Dark.png" id="5_yh7ir"]
[ext_resource type="Texture2D" uid="uid://csl1q3hv1e5cv" path="res://Fonts/T_Mouse_Left_Key_Dark.png" id="6_ga2p0"]
[ext_resource type="AudioStream" uid="uid://i552n3q2hc0l" path="res://Sounds/Music/fpc3beat120bpm.wav" id="7_a3l7o"]
[ext_resource type="Shader" path="res://signal.gdshader" id="11_x1txl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xvqoe"]
shader = ExtResource("2_0kkhb")
shader_parameter/background_color = Vector4(0, 0, 0, 1)
shader_parameter/line_color = Vector4(0, 1, 1, 1)
shader_parameter/line_freq = 9.075
shader_parameter/height = -0.49
shader_parameter/speed = 0.05
shader_parameter/scale = Vector2(2.685, 11.36)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fviuc"]
shader = ExtResource("11_x1txl")
shader_parameter/color_signal = null
shader_parameter/size = 0.2
shader_parameter/zoom = 8.0
shader_parameter/speed = 6.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_df0y5")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_xvqoe")
layout_mode = 0
offset_left = -176.0
offset_top = -440.0
offset_right = 3396.0
offset_bottom = 3147.0
scale = Vector2(0.640159, 0.538289)
texture = ExtResource("2_yj150")
expand_mode = 1

[node name="PaperControl" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00468994
anchor_top = 0.0613953
anchor_right = 0.991141
anchor_bottom = 0.255814
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 120
text = "Can You Feel The Rhythm?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255341
anchor_top = 0.387907
anchor_right = 0.752475
anchor_bottom = 0.715349
offset_left = 3.05176e-05
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="Prompt" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Prompt"]
layout_mode = 2
texture = ExtResource("5_yh7ir")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Prompt"]
layout_mode = 2
texture = ExtResource("6_ga2p0")

[node name="Label" type="Label" parent="VBoxContainer/Prompt"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 96
text = "To Begin"
horizontal_alignment = 1

[node name="Prompt2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Prompt2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 64
text = "Tap Along To The Beat"
horizontal_alignment = 1

[node name="Prompt3" type="HBoxContainer" parent="VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Prompt3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 46
text = "Keep tapping, the audio is going to fade out"
horizontal_alignment = 1

[node name="Prompt4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Prompt4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 64
text = "Almost There! "
horizontal_alignment = 1

[node name="GameEndingCountdownLabel" type="Label" parent="VBoxContainer/Prompt4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 72
text = "5"

[node name="TrackFadeTimerLabel" type="Label" parent="VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="GameTimerDebug" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n04ua")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_a3l7o")
volume_db = 7.658

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_fviuc")
layout_mode = 0
offset_left = 496.0
offset_top = 44.0
offset_right = 1384.0
offset_bottom = 754.0
color = Color(0.803922, 0.803922, 0.803922, 1)

[connection signal="beat_tracking_has_started" from="." to="." method="_on_beat_tracking_has_started"]
[connection signal="game_ending" from="." to="." method="_on_game_ending"]
[connection signal="game_has_started" from="." to="." method="_on_game_has_started"]
[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
